Fix project setup. Make integrationtest pipeline possible