@@ -11,7 +11,6 @@ repositories {
 
 dependencies {
     implementation(project(":data"))
-    implementation(project(":logic"))
 
     implementation("org.springframework.boot:spring-boot-starter-test")
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
@@ -20,6 +19,7 @@ dependencies {
     testImplementation("org.springframework.boot:spring-boot-starter-web")
     testImplementation("org.springframework.boot:spring-boot-starter-test")
 
+    testRuntimeOnly(project(":logic"))
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 }
 
@@ -33,6 +33,14 @@ tasks.test {
     testLogging {
         events("passed")
     }
+
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
+
+    // Set the classes directory to include both main and logic module's output
+    testClassesDirs = files(sourceSets["test"].output.classesDirs, sourceSets["main"].output.classesDirs)
+
+    // Ensure the classpath includes the logic module's dependencies
+    classpath = sourceSets["test"].runtimeClasspath + project(":logic").sourceSets["main"].runtimeClasspath
 }
 
 kotlin {
